# ProfileToolkit

./: .gitignore  CLAUDE.md  ProfileToolkit.py  README.md  build.py  profile_converter.py  pyproject.toml  run.command
bundled_profiles/: CREDITS.md  manifest.json
docs/superpowers/plans/: 2026-04-07-profile-converter-audit.md
example_profiles/: test_filament_locked.json  test_filament_universal.json  test_process_locked.json  test_project.3mf
example_profiles/output/: Embedded_JSON_Filament.json  Trapped_PETG_in_Project.json  Trapped_PLA_in_Project.json
profile_toolkit/: __init__.py  about_dialog.py  app.py  batch_rename_dialog.py  compare_dialog.py  compare_panel.py  constants.py  convert_panel.py  detail_panel.py  dialogs.py  list_panel.py  models.py  online_import_wizard.py  panels.py  providers.py  prusa_bundle_wizard.py  recommendations_dialog.py  state.py  theme.py  utils.py  widgets.py
profile_toolkit/providers_pkg/: __init__.py  base.py  community.py  databases.py  manufacturers.py
resources/: AppIcon.ai  AppIcon.icns  generate_icon.sh
resources/icons/: generate_pngs.py  icon_loader.py  icon_preview.html
tests/: conftest.py  test_constants.py  test_detail_panel.py  test_engine_edge_cases.py  test_models.py  test_preset_index.py  test_profile.py  test_providers.py  test_slicer_detector.py  test_state.py  test_theme.py  test_utils.py
