[project]
name = "profile-toolkit"
version = "0.1.0"
description = "Cross-platform GUI for unlocking/converting 3D printer slicer profiles"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = ["pyinstaller"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # line length handled by formatter
    "N802",  # function name should be lowercase (tkinter callbacks)
    "N803",  # argument name should be lowercase (tkinter args like 'master')
]

[tool.ruff.lint.isort]
known-first-party = ["profile_toolkit"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # gradual typing adoption
check_untyped_defs = true

[tool.ruff.format]
quote-style = "double"
